# Chess

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  branchtest.txt  cmake_install.cmake  match_log.txt  match_log_cc.txt  match_log_pc.txt  mytext.txt  prova.cpp  readme.txt
include/: Bishop.hpp  Board.hpp  CheckException.hpp  CheckMateException.hpp  Computer.hpp  DrawException.hpp  Human.hpp  IllegalMoveException.hpp  King.hpp  Knight.hpp  Logger.hpp  Match.hpp  Pawn.hpp  Piece.hpp  Player.hpp  Queen.hpp  Rook.hpp  include.hpp  test.hpp  test2.hpp
src/: Bishop.cpp  Board.cpp  Computer.cpp  Human.cpp  King.cpp  Knight.cpp  Logger.cpp  Match.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  main.cpp  main_replay.cpp
